Bug 467255 - Kate crashing when clicking "clear" in the bottom textbox on the find/replace window
Summary: Kate crashing when clicking "clear" in the bottom textbox on the find/replace...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.08.2
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2023-03-12 22:51 UTC by amberbooth2k
Modified: 2023-03-18 17:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description amberbooth2k 2023-03-12 22:51:08 UTC
Application: kate (22.08.2)

Qt Version: 5.15.6
Frameworks Version: 5.99.0
Operating System: Linux 5.13.0-valve36-1-neptune x86_64
Windowing System: X11
Distribution: SteamOS
DrKonqi: 5.26.1 [KCrashBackend]

-- Information about the crash:
When clicking "clear" on the bottom textbox, Kate always craashes for me. This issue is not a one time occurance as it happens everytime I do it.

The crash can be reproduced every time.

-- Backtrace:
Application: Kate (kate), signal: Segmentation fault

[KCrash Handler]
#4  0x00007f0221d24fb8 in ?? () from /usr/lib/libQt5Core.so.5
#5  0x00007f0221caee92 in QAbstractItemModel::modelAboutToBeReset(QAbstractItemModel::QPrivateSignal) () from /usr/lib/libQt5Core.so.5
#6  0x00007f0202e3a92b in ?? () from /usr/lib/qt/plugins/ktexteditor/katesearchplugin.so
#7  0x00007f0202e59475 in ?? () from /usr/lib/qt/plugins/ktexteditor/katesearchplugin.so
#8  0x00007f0221d25381 in ?? () from /usr/lib/libQt5Core.so.5
#9  0x00007f02228ccec7 in QAction::triggered(bool) () from /usr/lib/libQt5Widgets.so.5
#10 0x00007f02228d28c7 in QAction::activate(QAction::ActionEvent) () from /usr/lib/libQt5Widgets.so.5
#11 0x00007f0222a54e3b in ?? () from /usr/lib/libQt5Widgets.so.5
#12 0x00007f0222a54f5d in ?? () from /usr/lib/libQt5Widgets.so.5
#13 0x00007f02229106e7 in QWidget::event(QEvent*) () from /usr/lib/libQt5Widgets.so.5
#14 0x00007f02228d9b1c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#15 0x00007f02228df339 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#16 0x00007f0221cf4b88 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
#17 0x00007f02228dd337 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) () from /usr/lib/libQt5Widgets.so.5
#18 0x00007f022292e894 in ?? () from /usr/lib/libQt5Widgets.so.5
#19 0x00007f022293015e in ?? () from /usr/lib/libQt5Widgets.so.5
#20 0x00007f02228d9b1c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#21 0x00007f0221cf4b88 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
#22 0x00007f022223913c in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /usr/lib/libQt5Gui.so.5
#23 0x00007f0222222985 in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Gui.so.5
#24 0x00007f021c0596c0 in ?? () from /usr/lib/libQt5XcbQpa.so.5
#25 0x00007f021f98181b in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#26 0x00007f021f9d7ec9 in ?? () from /usr/lib/libglib-2.0.so.0
#27 0x00007f021f9800d2 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#28 0x00007f0221d3f50c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#29 0x00007f0221ced32c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#30 0x00007f0221cf7e59 in QCoreApplication::exec() () from /usr/lib/libQt5Core.so.5
#31 0x0000559377d615d5 in ?? ()
#32 0x00007f022166d290 in ?? () from /usr/lib/libc.so.6
#33 0x00007f022166d34a in __libc_start_main () from /usr/lib/libc.so.6
#34 0x0000559377d63af5 in ?? ()
[Inferior 1 (process 13098) detached]

Reported using DrKonqi
Comment 1 Waqar Ahmed 2023-03-13 07:10:04 UTC
Git commit 5ed1c9f7255fb540f2b7ceae102da2f2278f3e41 by Waqar Ahmed.
Committed on 13/03/2023 at 07:09.
Pushed by waqar into branch 'master'.

Search: Fix crash on clicking clear

m_curResults was null

M  +3    -1    addons/search/SearchPlugin.cpp

https://invent.kde.org/utilities/kate/commit/5ed1c9f7255fb540f2b7ceae102da2f2278f3e41
Comment 2 Waqar Ahmed 2023-03-18 17:12:32 UTC
Git commit d9abb86d25e9941a40afcdf72589111a5a24dc67 by Waqar Ahmed.
Committed on 18/03/2023 at 17:09.
Pushed by waqar into branch 'release/23.04'.

Search: Fix crash on clicking clear

m_curResults was null
(cherry picked from commit 5ed1c9f7255fb540f2b7ceae102da2f2278f3e41)

M  +3    -1    addons/search/SearchPlugin.cpp

https://invent.kde.org/utilities/kate/commit/d9abb86d25e9941a40afcdf72589111a5a24dc67