Search: Fix crash on clicking clear

m_curResults was null

BUG: 467255